--- a/gei_dash.html
+++ b/gei_dash.html
@@ -59,9 +59,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container mt-5">
       <div class="col-lg-10 offset-lg-1">
         <div>
-          <h1 name="top">藝’（ゲイダッシュ）プロジェクト</h1><!-- 名前 -->
-
-          <div class="row pb-5 pt-2">
+          <h1 name="top">藝’（ゲイダッシュ）プロジェクト</h1>
+          <picture>
+            <!-- SP版の画像 -->
+            <source srcset="assets/gei_dash/gei_banner_sp.jpg" media="(max-width: 768px)">
+            <!-- デフォルト（PC版）の画像 -->
+            <img src="assets/gei_dash/gei_banner_pc.jpg" class="img-fluid" alt="藝’プロジェクトのバナー">
+        </picture>
+        <div class="row pb-5 pt-2">
             <p>自分ではない誰かのための”表現”。<br>
                 それは美術館ではなく、まちなかや、スーパーマーケット、学校、職場…日常のなかで、誰かを笑顔にするために潜んでいる。<br>
                 そんな「藝術」とは言わない謙虚さを持った物や空間を、「藝'(ゲイダッシュ)」と名付けて集めることにしました。
@@ -79,10 +84,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <hr class="custom-divider">
      <div class="row pt-5 pb-5">
         <div id="details-001" class="details-content" style="display: block;">
-            <section>
+            <section class="card-section">
                 <div class="row d-flex align-items-start">
                     <!-- テキスト部分 -->
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 text-content">
                         <div>
                             <h6>profile 001</h6>
                             <h3>ジムのデッサン人形</h3>
@@ -155,17 +160,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <!-- 画像部分 -->
-                    <div class="col-lg-4 d-flex flex-column">
+                    <div class="col-lg-4 d-flex flex-colum image-content">
                         <img loading="lazy" src="assets/gei_dash/dash001-3.png">
                     </div>
                 </div>
             </section>
         </div>
         <div id="details-002" class="details-content" style="display: none;">
-            <section>
+            <section class="card-section">
                 <div class="row d-flex align-items-start">
                     <!-- テキスト部分 -->
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 text-content">
                         <div>
                             <h6>profile 002</h6>
                             <h3>玄関前の雪だるま</h3>
@@ -237,17 +242,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <!-- 画像部分 -->
-                    <div class="col-lg-4 d-flex flex-column">
+                    <div class="col-lg-4 d-flex flex-column image-content">
                         <img loading="lazy" src="assets/gei_dash/dash002.png">
                     </div>
                 </div>
             </section>
         </div>
         <div id="details-003" class="details-content" style="display: none;">
-            <section>
+            <section class="card-section">
                 <div class="row d-flex align-items-start">
                     <!-- テキスト部分 -->
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 text-content">
                         <div>
                             <h6>profile 003</h6>
                             <h3>ドラッグストアの前の象</h3>
@@ -319,17 +324,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <!-- 画像部分 -->
-                    <div class="col-lg-4 d-flex flex-column">
+                    <div class="col-lg-4 d-flex flex-column image-content">
                         <img loading="lazy" src="assets/gei_dash/dash003.png">
                     </div>
                 </div>
             </section>
         </div>
         <div id="details-004" class="details-content" style="display: none;">
-            <section>
+            <section class="card-section">
                 <div class="row d-flex align-items-start">
                     <!-- テキスト部分 -->
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 text-content">
                         <div>
                             <h6>profile 004</h6>
                             <h3>父の日の顔はめパネル</h3>
@@ -401,17 +406,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <!-- 画像部分 -->
-                    <div class="col-lg-4 d-flex flex-column">
+                    <div class="col-lg-4 d-flex flex-column image-content">
                         <img loading="lazy" src="assets/gei_dash/dash004.png">
                     </div>
                 </div>
             </section>
         </div>
         <div id="details-005" class="details-content" style="display: none;">
-            <section>
+            <section class="card-section">
                 <div class="row d-flex align-items-start">
                     <!-- テキスト部分 -->
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 text-content">
                         <div>
                             <h6>profile 005</h6>
                             <h3>アルコールスプレーに添えられたかき氷</h3>
@@ -483,17 +488,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <!-- 画像部分 -->
-                    <div class="col-lg-4 d-flex flex-column">
+                    <div class="col-lg-4 d-flex flex-column image-content">
                         <img loading="lazy" src="assets/gei_dash/dash005.png">
                     </div>
                 </div>
             </section>
         </div>
         <div id="details-006" class="details-content" style="display: none;">
-            <section>
+            <section class="card-section">
                 <div class="row d-flex align-items-start">
                     <!-- テキスト部分 -->
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 text-content">
                         <div>
                             <h6>profile 006</h6>
                             <h3>大きなビールの模型</h3>
@@ -566,17 +571,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <!-- 画像部分 -->
-                    <div class="col-lg-4 d-flex flex-column">
+                    <div class="col-lg-4 d-flex flex-column image-content">
                         <img loading="lazy" src="assets/gei_dash/dash006.png">
                     </div>
                 </div>
             </section>
         </div>
         <div id="details-007" class="details-content" style="display: none;">
-            <section>
+            <section class="card-section">
                 <div class="row d-flex align-items-start">
                     <!-- テキスト部分 -->
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 text-content">
                         <div>
                             <h6>profile 007</h6>
                             <h3>富士山が見れるパーテーション</h3>
@@ -648,17 +653,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <!-- 画像部分 -->
-                    <div class="col-lg-4 d-flex flex-column">
+                    <div class="col-lg-4 d-flex flex-column image-content">
                         <img loading="lazy" src="assets/gei_dash/dash007.png">
                     </div>
                 </div>
             </section>
         </div>
         <div id="details-008" class="details-content" style="display: none;">
-            <section>
+            <section class="card-section">
                 <div class="row d-flex align-items-start">
                     <!-- テキスト部分 -->
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 text-content">
                         <div>
                             <h6>profile 008</h6>
                             <h3>工事現場のカラーコーンの上の造花</h3>
@@ -730,7 +735,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <!-- 画像部分 -->
-                    <div class="col-lg-4 d-flex flex-column">
+                    <div class="col-lg-4 d-flex flex-column image-content">
                         <img loading="lazy" src="assets/gei_dash/dash008.png">
                     </div>
                 </div>
