--- a/gei_dash.html
+++ b/gei_dash.html
@@ -742,6 +742,172 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </section>
         </div>
 
+        <div id="details-009" class="details-content" style="display: none;">
+            <section class="card-section">
+                <div class="row d-flex align-items-start">
+                    <!-- テキスト部分 -->
+                    <div class="col-lg-8 text-content">
+                        <div>
+                            <h6>profile 009</h6>
+                            <h3>「出口」のうえの猫ちゃん</h3>
+                            <div class="location-info">
+                                <i class="fas fa-clock"></i> <span>2025年1月</span>
+                                <i class="fas fa-map-marker-alt"></i> <span>滋賀県多賀町のサービスエリア</span>
+                            </div>
+                        </div>
+                        <div>
+                            <p>サービスエリアの看板を彩っていた、紙でできた猫ちゃん。</p>
+                        </div>
+                        <div class="row d-flex align-items-center">
+                            <div class="radar-chart-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 200 200">
+                                    <g stroke="#dce5eb">
+                                        <path d="M 100 100 L 100.0 0.0"/>
+                                        <path d="M 100 100 L 195.1 69.1"/>
+                                        <path d="M 100 100 L 158.8 180.9"/>
+                                        <path d="M 100 100 L 41.2 180.9"/>
+                                        <path d="M 100 100 L 4.9 69.1"/>
+                                    </g>
+                                    <g stroke="#dce5eb" fill="none">
+                                        <path d="M 100.0 0.0 L 195.1 69.1 L 158.8 180.9 L 41.2 180.9 L 4.9 69.1 L 100.0 0.0"/>
+                                        <path d="M 100.0 20.0 L 176.1 75.3 L 147.0 164.7 L 53.0 164.7 L 23.9 75.3 L 100.0 20.0"/>
+                                        <path d="M 100.0 40.0 L 157.1 81.5 L 135.3 148.5 L 64.7 148.5 L 42.9 81.5 L 100.0 40.0"/>
+                                        <path d="M 100.0 60.0 L 138.0 87.6 L 123.5 132.4 L 76.5 132.4 L 62.0 87.6 L 100.0 60.0"/>
+                                        <path d="M 100.0 80.0 L 119.0 93.8 L 111.8 116.2 L 88.2 116.2 L 81.0 93.8 L 100.0 80.0"/>
+                                    </g>
+                                    <path d="M 100.0 50.0 L 119.0 93.8 L 135.3 148.5 L 58.9 156.6 L 71.5 90.7 L 100.0 50.0" fill="#00000030" stroke="#000000"/>
+                                    <g fill="#000000">
+                                        <circle cx="100.0" cy="50.0" r="3"/>
+                                        <circle cx="119.0" cy="93.8" r="3"/>
+                                        <circle cx="135.3" cy="148.5" r="3"/>
+                                        <circle cx="58.9" cy="156.6" r="3"/>
+                                        <circle cx="71.5" cy="90.7" r="3"/>
+                                    </g>
+                                </svg>
+                                <dl>
+                                    <div>
+                                        <dt>創造性</dt>
+                                        <dd>5.0</dd>
+                                    </div>
+                                    <div>
+                                        <dt>実用性</dt>
+                                        <dd>2.0</dd>
+                                    </div>
+                                    <div>
+                                        <dt>文化的価値</dt>
+                                        <dd>6.0</dd>
+                                    </div>
+                                    <div>
+                                        <dt>素朴な魅力</dt>
+                                        <dd>7.0</dd>
+                                    </div>
+                                    <div>
+                                        <dt>共感度</dt>
+                                        <dd>3.0</dd>
+                                    </div>
+                                </dl>
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="text-box">
+                                    <p>
+                                        折り紙でできた、紙製の猫。サービスエリアの職員の方が作ったのか、素朴な雰囲気が伝わってくる。<br>
+                                        「出口」の看板のうえにあることで、優しく案内してくれている雰囲気が伝わる。
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 画像部分 -->
+                    <div class="col-lg-4 d-flex flex-column image-content">
+                        <img loading="lazy" src="assets/gei_dash/dash009.PNG">
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <div id="details-010" class="details-content" style="display: none;">
+            <section class="card-section">
+                <div class="row d-flex align-items-start">
+                    <!-- テキスト部分 -->
+                    <div class="col-lg-8 text-content">
+                        <div>
+                            <h6>profile 010</h6>
+                            <h3>トイレットペーパーの芯でできた迎春</h3>
+                            <div class="location-info">
+                                <i class="fas fa-clock"></i> <span>2025年1月</span>
+                                <i class="fas fa-map-marker-alt"></i> <span>福井県北鯖江市のサービスエリア</span>
+                            </div>
+                        </div>
+                        <div>
+                            <p>サービスエリアのトイレに置かれていた、獅子舞と門松。</p>
+                        </div>
+                        <div class="row d-flex align-items-center">
+                            <div class="radar-chart-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 200 200">
+                                    <g stroke="#dce5eb">
+                                        <path d="M 100 100 L 100.0 0.0"/>
+                                        <path d="M 100 100 L 195.1 69.1"/>
+                                        <path d="M 100 100 L 158.8 180.9"/>
+                                        <path d="M 100 100 L 41.2 180.9"/>
+                                        <path d="M 100 100 L 4.9 69.1"/>
+                                    </g>
+                                    <g stroke="#dce5eb" fill="none">
+                                        <path d="M 100.0 0.0 L 195.1 69.1 L 158.8 180.9 L 41.2 180.9 L 4.9 69.1 L 100.0 0.0"/>
+                                        <path d="M 100.0 20.0 L 176.1 75.3 L 147.0 164.7 L 53.0 164.7 L 23.9 75.3 L 100.0 20.0"/>
+                                        <path d="M 100.0 40.0 L 157.1 81.5 L 135.3 148.5 L 64.7 148.5 L 42.9 81.5 L 100.0 40.0"/>
+                                        <path d="M 100.0 60.0 L 138.0 87.6 L 123.5 132.4 L 76.5 132.4 L 62.0 87.6 L 100.0 60.0"/>
+                                        <path d="M 100.0 80.0 L 119.0 93.8 L 111.8 116.2 L 88.2 116.2 L 81.0 93.8 L 100.0 80.0"/>
+                                    </g>
+                                    <path d="M 100.0 20.0 L 119.0 93.8 L 141.1 156.6 L 70.6 140.5 L 52.4 84.5 L 100.0 20.0" fill="#00000030" stroke="#000000"/>
+                                    <g fill="#000000">
+                                        <circle cx="100.0" cy="20.0" r="3"/>
+                                        <circle cx="119.0" cy="93.8" r="3"/>
+                                        <circle cx="141.1" cy="156.6" r="3"/>
+                                        <circle cx="70.6" cy="140.5" r="3"/>
+                                        <circle cx="52.4" cy="84.5" r="3"/>
+                                    </g>
+                                </svg>
+                                <dl>
+                                    <div>
+                                        <dt>創造性</dt>
+                                        <dd>8.0</dd>
+                                    </div>
+                                    <div>
+                                        <dt>実用性</dt>
+                                        <dd>2.0</dd>
+                                    </div>
+                                    <div>
+                                        <dt>文化的価値</dt>
+                                        <dd>7.0</dd>
+                                    </div>
+                                    <div>
+                                        <dt>素朴な魅力</dt>
+                                        <dd>5.0</dd>
+                                    </div>
+                                    <div>
+                                        <dt>共感度</dt>
+                                        <dd>5.0</dd>
+                                    </div>
+                                </dl>
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="text-box">
+                                    <p>
+                                        トイレットペーパーの芯で作られているとは思えない、クオリティの高さが目を惹く。<br>
+                                        手洗い所のうえにあり、手を洗いながら可愛らしい獅子舞に目を細めることができた。
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 画像部分 -->
+                    <div class="col-lg-4 d-flex flex-column image-content">
+                        <img loading="lazy" src="assets/gei_dash/dash010.png">
+                    </div>
+                </div>
+            </section>
+        </div>
+
         <div class="col-lg-1">
         <div class="card" onclick="toggleDetails('details-001')">
             <div class="img-container">
@@ -800,38 +966,52 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             </div>
         </div>
+        <div class="col-lg-1">
+            <div class="card" onclick="toggleDetails('details-009')">
+            <div class="img-container">
+                <img src="assets/gei_dash/dash009.PNG" class="img-fluid" alt="">
+            </div>
+            </div>
+        </div>
+        <div class="col-lg-1">
+            <div class="card" onclick="toggleDetails('details-010')">
+            <div class="img-container">
+                <img src="assets/gei_dash/dash010.png" class="img-fluid" alt="">
+            </div>
+            </div>
+        </div>
     </div>
     </div>
 </div>
 
-  <!-- JavaScriptコードをここに追加 -->
-  <script>
-    function toggleDetails(detailsId) {
-        window.onload = function() {
-  // 最初の詳細情報を開く
-  var firstDetail = document.getElementById('details-001');
-  if (firstDetail) {
-    firstDetail.style.display = 'block';
-  }
-};
-
-      // 他の詳細情報を非表示にする
-      var allDetails = document.querySelectorAll('.details-content');
-      allDetails.forEach(function(detail) {
-        if (detail.id !== detailsId) {
-          detail.style.display = 'none';
-        }
-      });
-
-      // クリックしたカードの詳細情報をトグル
-      var selectedDetail = document.getElementById(detailsId);
-      if (selectedDetail.style.display === 'none' || selectedDetail.style.display === '') {
-        selectedDetail.style.display = 'block';
-      } else {
-        selectedDetail.style.display = 'none';
-      }
+<!-- JavaScriptコードをここに追加 -->
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+    // 初回ロード時にURLハッシュをチェック
+    const hash = window.location.hash;
+    if (hash) {
+    const detailsId = hash.replace("#", "details-");
+    showDetails(detailsId);
+    } else {
+    // ハッシュがない場合、最初の詳細情報を開く
+    showDetails("details-001");
     }
-  </script>
+});
+
+function toggleDetails(detailsId) {
+    // URLハッシュを更新
+    window.location.hash = detailsId.replace("details-", "");
+    showDetails(detailsId);
+}
+
+function showDetails(detailsId) {
+    // 他の詳細情報を非表示にする
+    var allDetails = document.querySelectorAll(".details-content");
+    allDetails.forEach(function (detail) {
+    detail.style.display = detail.id === detailsId ? "block" : "none";
+    });
+}
+</script>
 
   </body>
 </html>
