--- a/gei_dash.html
+++ b/gei_dash.html
@@ -819,7 +819,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <!-- 画像部分 -->
                     <div class="col-lg-4 d-flex flex-column image-content">
-                        <img loading="lazy" src="assets/gei_dash/dash009.PNG">
+                        <img loading="lazy" src="assets/gei_dash/dash009.png">
                     </div>
                 </div>
             </section>
@@ -969,7 +969,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-lg-1">
             <div class="card" onclick="toggleDetails('details-009')">
             <div class="img-container">
-                <img src="assets/gei_dash/dash009.PNG" class="img-fluid" alt="">
+                <img src="assets/gei_dash/dash009.png" class="img-fluid" alt="">
             </div>
             </div>
         </div>
