--- a/product.html
+++ b/product.html
@@ -38,21 +38,19 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T96WLVWC"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<header class="fixed-top shadow-sm">
-  <nav class="container d-flex justify-content-end align-items-center py-2">
-    <div class="social-icons">
-      <a href="https://x.com/say____u" target="_blank" class="me-2">
-        <img src="assets/sns_icon/x.png" alt="Twitter" width="24">
-      </a>
-      <a href="https://www.instagram.com/us_yu3/" target="_blank" class="me-2">
-        <img src="assets/sns_icon/instagram.png" alt="Instagram" width="24">
-      </a>
-      <a href="mailto:www.satsuki.wada@gmail.com" target="_blank">
-        <img src="assets/sns_icon/mail.png" alt="mail" width="24">
-      </a>
-    </div>
-  </nav>
-</header>
+
+<div id="header-placeholder"></div>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    fetch("/header.html") // 絶対パスで指定
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("header-placeholder").innerHTML = data;
+      })
+      .catch(error => console.error("Error loading header:", error));
+  });
+</script>
+
 
     <div class="container mt-5">
       <div class="col-lg-10 offset-lg-1">
