--- a/header.html
+++ b/header.html
@@ -3,6 +3,7 @@
       <div class="site-nav">
         <a href="index.html#works" class="me-3 nav-link">Works</a>
         <a href="index.html#profile" class="nav-link">Profile</a>
+        <a href="index.html#note" class="nav-link">Blog</a>
       </div>
       <div class="social-icons">
         <a href="https://x.com/say____u" target="_blank" class="me-2">
