--- a/index.html
+++ b/index.html
@@ -244,9 +244,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       loading="lazy"></iframe>
             </div>
             <div class="col-lg-6 mb-4">
-              <iframe class="note-embed" src="https://note.com/embed/notes/na4390b9e3742" 
-                      style="border: 0; width: 100%; height: 400px;" 
-                      loading="lazy"></iframe>
+              <iframe class="note-embed" src="https://note.com/embed/notes/ne3e271d6393b" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
             </div>
           </div>
         
