--- a/comtool.html
+++ b/comtool.html
@@ -15,10 +15,10 @@
   
     <title>コミュニケーションの進化年表</title>
     <meta property="og:url" content="http://wsatsuki.com/" />
-    <meta property="og:title" content="コミュニケーションの進化年表">
+    <meta property="og:title" content="コミュニケーションツールの進化年表">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Designer / Consultant / Illustrator etc...">
-    <meta property="og:image" content="assets/ogp.jpg">
+    <meta property="og:description" content="コミュニケーションツールは、私たちの社会とともにどのように進化してきたのだろうか。そしてこれから、どのように変わっていくのだろうか。本作は、2021年に制作したneo connectionの年表をベースに、現在の技術動向や身体性、感情、空間といった観点を加えて再構成したもの。 過去を振り返りながら、未来のコミュニケーションの可能性を見つめ直すための年表である。">
+    <meta property="og:image" content="assets/timeline/timeline_thum.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
