--- a/comp.html
+++ b/comp.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="劣等感のすゝめ-劣等感に関するzine">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Designer / Consultant / Illustrator etc...">
-    <meta property="og:image" content="assets/ogp.jpg">
+    <meta property="og:image" content="http://wsatsuki.com/assets/comp/comp_thum.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
