--- a/dandan.html
+++ b/dandan.html
@@ -28,7 +28,7 @@
     <meta property="og:title" content="だんだん-住宅における匂い・菌に関する製品・システムの提案">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Designer / Consultant / Illustrator etc...">
-    <meta property="og:image" content="assets/ogp.jpg">
+    <meta property="og:image" content="http://wsatsuki.com/assets/dandan/dandan-top.jpg">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
