--- a/petoile.html
+++ b/petoile.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Petoile-仕事の帰り道で星を手に入れ、室内で飼う事ができるプロダクトの提案">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Designer / Consultant / Illustrator etc...">
-    <meta property="og:image" content="assets/ogp.jpg">
+    <meta property="og:image" content="http://wsatsuki.com/assets/pet/petoile-top.jpg">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
