--- a/gei_dash.html
+++ b/gei_dash.html
@@ -17,7 +17,7 @@
         <meta property="og:title" content="藝’（ゲイダッシュ）プロジェクト">
         <meta property="og:type" content="website">
         <meta property="og:description" content="Designer / Consultant / Illustrator etc...">
-        <meta property="og:image" content="assets/ogp.jpg">
+        <meta property="og:image" content="http://wsatsuki.com/assets/gei_dash/gei_thum.jpg">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
