--- a/ooze.html
+++ b/ooze.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="ooze-これからのエンターテイメント">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Designer / Consultant / Illustrator etc...">
-    <meta property="og:image" content="assets/ogp.jpg">
+    <meta property="og:image" content="http://wsatsuki.com/assets/ooze/ooze-top.jpg">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
