--- a/owns.html
+++ b/owns.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="owns-大量生産/消費問題に対してプロダクトデザインができること">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Designer / Consultant / Illustrator etc...">
-    <meta property="og:image" content="assets/ogp.jpg">
+    <meta property="og:image" content="http://wsatsuki.com/assets/owns/owns-top.jpg">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
