--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a name="works">Design</a>
           <div class="row pt-2 pb-2"></div><!-- 小見出し -->
           <div class="col-lg-4">
+            <a href="survival.html" class="text-dark text-decoration-none">
+              <img src="assets/survival/survival-thum.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">社会サバイバル・ハンドブック</h5>
+                <p style="font-size: 12px">この社会のルールに反撃してなんとか生き延びるためのハンドブック。</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4">
             <a href="comtool.html" class="text-dark text-decoration-none">
               <img src="assets/timeline/timeline_thum.png" class="img-fluid" alt="">
               <div class="mt-1">
